--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -36,7 +36,7 @@
     <string name="menu_new_folder">New Folder</string>
     
     <!-- Multi select option menu -->
-    <string name="menu_multi_select">Multi Select</string>
+    <string name="menu_multi_select">Multiple Select</string>
 
     <string name="menu_delete">Delete</string>
     <string name="menu_rename">Rename</string>
